styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap');

body {
    font-family: "Roboto";
    margin: 0;
}

h1 {
    font-size: 48px;
    font-weight: 900;
}

h6 {
    font-size: 18px;
    font-weight: bold;
    margin: 0;
}

p, button, li {
    font-size: 18px;
}

button {
    background-color: #3882f6;
    padding: 7px;
    border-radius: 10px;
    max-width: 150px;
    color:#f9faf8;
    margin: 10px 0;
}

.header, .footer {
    background-color: #1f2937;
    color: #f9faf8;
    display: flex;
    flex-direction: column;
    padding: 0 15%;
}

.nav {
    display: flex;
    justify-content: space-between;
}

.nav > ul {
    display: flex;
    align-items: center;
    gap: 25px;
    padding: 0;
    align-items: center;
}

li {
    list-style-type: none;
}

.header-logo {
    font-size: 24px;
}

.hero {
    display: flex;
    gap: 40px;
    margin: 70px 0;
    align-items: center;
}

.hero-text {
    display: flex;
    flex-direction: column;
}

.hero-text > h1 {
    margin: 0
}

.hero-text > p {
    color: #e5e7eb;
    margin: 0;
}

.hero-image > img {
    max-width: 350px
}

.information {
    padding: 0 15%;
}

.information > h2 {
    margin: 40px;
    text-align: center;
}

.info-group {
    display: flex;
    gap: 30px;
}

.info-box {
    border:#3882f6 4px solid;
    border-radius: 10px;
    min-height: 150px;
}

.quote {
    background-color: #e5e7eb;
    padding: 10% 15%;
}

.quote-text > p {
    font-size: 36px !important;
    font-style: italic;
    margin: 0;
}

.quote-source > p {
    text-align: right;
    font-weight: bold;
    margin: 0;
}

.cta {
    padding: 10%;
}

.cta-inner {
    background-color: #3882f6;
    color: #e5e7eb;
    padding: 5% 10%;
    display: flex;
    justify-content: space-around;
}

.cta-right {
    margin: auto 0;
}

.cta-left {
    display: flex;
    flex-direction: column;
}

.cta-left > p {
    margin: 0;
}

.footer > p {
    text-align: center;
}

